fix: css version mobile

--- a/src/pages/LockScreen.css
+++ b/src/pages/LockScreen.css
@@ -159,3 +159,27 @@
 .lock-screen.is-dragging .lock-icon {
   transition: none;
 }
+
+
+@media screen and (max-width: 449px) {
+.lockmod{
+  bottom: 60px;
+}
+
+.lock-badge{
+  bottom: 58px;
+}
+
+.lock-quick-unlock{
+  bottom: 60px;
+}
+
+.lock-screen-logo{
+  top: 70px;
+}
+
+.clock{
+  font-size: 4rem;
+}
+
+}
